--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
     <title>Студія</title>
   </head>
   <body>
@@ -63,15 +63,15 @@
       <section class="hero">
         <div class="container">
           <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-          <button data-modal-open type="button" class="hero-tack">Замовити послугу</button>
+          <button data-modal-open type="button" class="hero-btn">Замовити послугу</button>
         </div>
       </section>
       <!--Список рішень-->
-      <section class="sections hidden">
+      <section class="sections distance">
         <div class="container">
           <h2 class="vissual-hidden">Інформація про компанію</h2>
-          <ul class="list-hidden list">
-            <li class="hidden-clause">
+          <ul class="unlikely list">
+            <li class="decision-clause">
               <div class="button-benefits">
                 <svg class="icon-antenna">
                   <use href="./images/icon.svg#icon-antenna"></use>
@@ -82,7 +82,7 @@
                 Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
               </p>
             </li>
-            <li class="hidden-clause">
+            <li class="decision-clause">
               <div class="button-benefits">
                 <svg class="icon-clock">
                   <use href="./images/icon.svg#icon-clock"></use>
@@ -93,7 +93,7 @@
                 Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
               </p>
             </li>
-            <li class="hidden-clause">
+            <li class="decision-clause">
               <div class="button-benefits">
                 <svg class="icon-diagram">
                   <use href="./images/icon.svg#icon-diagram"></use>
@@ -104,7 +104,7 @@
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
-            <li class="hidden-clause">
+            <li class="decision-clause">
               <div class="button-benefits">
                 <svg class="icon-astronaut">
                   <use href="./images/icon.svg#icon-astronaut"></use>
@@ -122,7 +122,7 @@
       <section class="sections">
         <div class="container">
           <h2 class="section-title">Чим ми займаємося</h2>
-          <ul class="occupation list">
+          <ul class="unlikely list">
             <li class="occupation-item">
               <img src="images/img.jpg" alt="Людина працює на комп'ютері" width="370" />
               <div class="under">
@@ -148,7 +148,7 @@
       <section class="team sections">
         <div class="container">
           <h2 class="section-title">Наша команда</h2>
-          <ul class="team-list list">
+          <ul class="unlikely list">
             <li class="team-list-item">
               <img src="images/img3.jpg" alt="Фото співробітника" width="270" />
               <div class="team-name">
@@ -304,7 +304,7 @@
       <section class="sections">
         <div class="container">
           <h2 class="section-title">Постійні клієнти</h2>
-          <ul class="list client">
+          <ul class="list unlikely">
             <li class="client-item">
               <a href="" class="client-link">
                 <svg class="svg-client" width="106px" height="60px">
