--- a/index.html
+++ b/index.html
@@ -147,38 +147,38 @@
       <!--Команда, співробітники-->
       <section class="team sections">
         <div class="container">
-          <h2 class="section-title">Наша команда</h2>
+          <h2 class="team__title">Наша команда</h2>
           <ul class="unlikely list">
-            <li class="team-list-item">
+            <li class="team__list-item">
               <img src="images/img3.jpg" alt="Фото співробітника" width="270" />
-              <div class="team-name">
-                <h3 class="team-title">Ігор Дем'яненко</h3>
-                <p class="team-item">Product Designer</p>
+              <div class="team__name">
+                <h3 class="team__pretitle">Ігор Дем'яненко</h3>
+                <p class="team__item">Product Designer</p>
                 <ul class="list social">
-                  <li class="social-item">
-                    <a class="social-link" href="">
-                      <svg class="social-icon" width="20" height="20">
+                  <li class="social__item">
+                    <a class="social__link" href="">
+                      <svg class="social__icon" width="20" height="20">
                         <use href="./images/icon.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-item">
-                    <a class="social-link" href="">
-                      <svg class="social-icon" width="20" height="20">
+                  <li class="social__item">
+                    <a class="social__link" href="">
+                      <svg class="social__icon" width="20" height="20">
                         <use href="./images/icon.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-item">
-                    <a class="social-link" href="">
-                      <svg class="social-icon" width="20" height="20">
+                  <li class="social__item">
+                    <a class="social__link" href="">
+                      <svg class="social__icon" width="20" height="20">
                         <use href="./images/icon.svg#icon-facebook "></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-item">
-                    <a class="social-link" href="">
-                      <svg class="social-icon" width="20" height="20">
+                  <li class="social__item">
+                    <a class="social__link" href="">
+                      <svg class="social__icon" width="20" height="20">
                         <use href="./images/icon.svg#icon-linkedin "></use>
                       </svg>
                     </a>
@@ -186,36 +186,36 @@
                 </ul>
               </div>
             </li>
-            <li class="team-list-item">
+            <li class="team__list-item">
               <img src="images/img4.jpg" alt="Фото співробітника" width="270" />
-              <div class="team-name">
-                <h3 class="team-title">Ольга Рєпіна</h3>
-                <p class="team-item">Frontend Developer</p>
+              <div class="team__name">
+                <h3 class="team__title">Ольга Рєпіна</h3>
+                <p class="team__item">Frontend Developer</p>
                 <ul class="list social">
-                  <li class="social-item">
-                    <a class="social-link" href="">
-                      <svg class="social-icon" width="20" height="20">
+                  <li class="social__item">
+                    <a class="social__link" href="">
+                      <svg class="social__icon" width="20" height="20">
                         <use href="./images/icon.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-item">
-                    <a class="social-link" href="">
-                      <svg class="social-icon" width="20" height="20">
+                  <li class="social__item">
+                    <a class="social__link" href="">
+                      <svg class="social__icon" width="20" height="20">
                         <use href="./images/icon.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-item">
-                    <a class="social-link" href="">
-                      <svg class="social-icon" width="20" height="20">
+                  <li class="social__item">
+                    <a class="social__link" href="">
+                      <svg class="social__icon" width="20" height="20">
                         <use href="./images/icon.svg#icon-facebook "></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-item">
-                    <a class="social-link" href="">
-                      <svg class="social-icon" width="20" height="20">
+                  <li class="social__item">
+                    <a class="social__link" href="">
+                      <svg class="social__icon" width="20" height="20">
                         <use href="./images/icon.svg#icon-linkedin "></use>
                       </svg>
                     </a>
@@ -223,36 +223,36 @@
                 </ul>
               </div>
             </li>
-            <li class="team-list-item">
+            <li class="team__list-item">
               <img src="images/img5.jpg" alt="Фото співробітника" width="270" />
-              <div class="team-name">
-                <h3 class="team-title">Микола Тарасов</h3>
-                <p class="team-item">Marketing</p>
+              <div class="team__name">
+                <h3 class="team__title">Микола Тарасов</h3>
+                <p class="team__item">Marketing</p>
                 <ul class="list social">
-                  <li class="social-item">
-                    <a class="social-link" href="">
-                      <svg class="social-icon" width="20" height="20">
+                  <li class="social__item">
+                    <a class="social__link" href="">
+                      <svg class="social__icon" width="20" height="20">
                         <use href="./images/icon.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-item">
-                    <a class="social-link" href="">
-                      <svg class="social-icon" width="20" height="20">
+                  <li class="social__item">
+                    <a class="social__link" href="">
+                      <svg class="social__icon" width="20" height="20">
                         <use href="./images/icon.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-item">
-                    <a class="social-link" href="">
-                      <svg class="social-icon" width="20" height="20">
+                  <li class="social__item">
+                    <a class="social__link" href="">
+                      <svg class="social__icon" width="20" height="20">
                         <use href="./images/icon.svg#icon-facebook "></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-item">
-                    <a class="social-link" href="">
-                      <svg class="social-icon" width="20" height="20">
+                  <li class="social__item">
+                    <a class="social__link" href="">
+                      <svg class="social__icon" width="20" height="20">
                         <use href="./images/icon.svg#icon-linkedin "></use>
                       </svg>
                     </a>
@@ -260,36 +260,36 @@
                 </ul>
               </div>
             </li>
-            <li class="team-list-item">
+            <li class="team__list-item">
               <img src="images/img6.jpg" alt="Фото співробітника" width="270" />
-              <div class="team-name">
-                <h3 class="team-title">Михайло Єрмаков</h3>
-                <p class="team-item">UI Designer</p>
+              <div class="team__name">
+                <h3 class="team__title">Михайло Єрмаков</h3>
+                <p class="team__item">UI Designer</p>
                 <ul class="list social">
-                  <li class="social-item">
-                    <a class="social-link" href="">
-                      <svg class="social-icon" width="20" height="20">
+                  <li class="social__item">
+                    <a class="social__link" href="">
+                      <svg class="social__icon" width="20" height="20">
                         <use href="./images/icon.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-item">
-                    <a class="social-link" href="">
-                      <svg class="social-icon" width="20" height="20">
+                  <li class="social__item">
+                    <a class="social__link" href="">
+                      <svg class="social__icon" width="20" height="20">
                         <use href="./images/icon.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-item">
-                    <a class="social-link" href="">
-                      <svg class="social-icon" width="20" height="20">
+                  <li class="social__item">
+                    <a class="social__link" href="">
+                      <svg class="social__icon" width="20" height="20">
                         <use href="./images/icon.svg#icon-facebook "></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-item">
-                    <a class="social-link" href="">
-                      <svg class="social-icon" width="20" height="20">
+                  <li class="social__item">
+                    <a class="social__link" href="">
+                      <svg class="social__icon" width="20" height="20">
                         <use href="./images/icon.svg#icon-linkedin "></use>
                       </svg>
                     </a>
