--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             <li class="team__list-item">
               <img src="images/img4.jpg" alt="Фото співробітника" width="270" />
               <div class="team__name">
-                <h3 class="team__title">Ольга Рєпіна</h3>
+                <h3 class="team__pretitle">Ольга Рєпіна</h3>
                 <p class="team__item">Frontend Developer</p>
                 <ul class="list social">
                   <li class="social__item">
@@ -226,7 +226,7 @@
             <li class="team__list-item">
               <img src="images/img5.jpg" alt="Фото співробітника" width="270" />
               <div class="team__name">
-                <h3 class="team__title">Микола Тарасов</h3>
+                <h3 class="team__pretitle">Микола Тарасов</h3>
                 <p class="team__item">Marketing</p>
                 <ul class="list social">
                   <li class="social__item">
@@ -263,7 +263,7 @@
             <li class="team__list-item">
               <img src="images/img6.jpg" alt="Фото співробітника" width="270" />
               <div class="team__name">
-                <h3 class="team__title">Михайло Єрмаков</h3>
+                <h3 class="team__pretitle">Михайло Єрмаков</h3>
                 <p class="team__item">UI Designer</p>
                 <ul class="list social">
                   <li class="social__item">
