--- a/index.html
+++ b/index.html
@@ -305,44 +305,44 @@
         <div class="container">
           <h2 class="section-title">Постійні клієнти</h2>
           <ul class="list unlikely">
-            <li class="client-item">
-              <a href="" class="client-link">
-                <svg class="svg-client" width="106px" height="60px">
+            <li class="client__item">
+              <a href="" class="client__link">
+                <svg class="client__svg" width="106px" height="60px">
                   <use href="./images/icon.svg#icon-ya-co"></use>
                 </svg>
               </a>
             </li>
-            <li class="client-item">
-              <a href="" class="client-link">
-                <svg class="svg-client" width="106px" height="60px">
+            <li class="client__item">
+              <a href="" class="client__link">
+                <svg class="client__svg" width="106px" height="60px">
                   <use href="./images/icon.svg#icon-tageline-here"></use>
                 </svg>
               </a>
             </li>
-            <li class="client-item">
-              <a href="" class="client-link">
-                <svg class="svg-client" width="106px" height="60px">
+            <li class="client__item">
+              <a href="" class="client__link">
+                <svg class="client__svg" width="106px" height="60px">
                   <use href="./images/icon.svg#icon-company"></use>
                 </svg>
               </a>
             </li>
-            <li class="client-item">
-              <a href="" class="client-link">
-                <svg class="svg-client" width="106px" height="60px">
+            <li class="client__item">
+              <a href="" class="client__link">
+                <svg class="client__svg" width="106px" height="60px">
                   <use href="./images/icon.svg#icon-foster-peters"></use>
                 </svg>
               </a>
             </li>
-            <li class="client-item">
-              <a href="" class="client-link">
-                <svg class="svg-client" width="106px" height="60px">
+            <li class="client__item">
+              <a href="" class="client__link">
+                <svg class="client__svg" width="106px" height="60px">
                   <use href="./images/icon.svg#icon-brand"></use>
                 </svg>
               </a>
             </li>
-            <li class="client-item">
-              <a href="" class="client-link">
-                <svg class="svg-client" width="106px" height="60px">
+            <li class="client__item">
+              <a href="" class="client__link">
+                <svg class="client__svg" width="106px" height="60px">
                   <use href="./images/icon.svg#icon-tageline"></use>
                 </svg>
               </a>
@@ -352,6 +352,7 @@
       </section>
     </main>
     <!--Контактна інформація-->
+
     <footer class="footer-title">
       <div class="container">
         <div>
