--- a/index.html
+++ b/index.html
@@ -353,80 +353,80 @@
     </main>
     <!--Контактна інформація-->
 
-    <footer class="footer-title">
+    <footer class="footer__title">
       <div class="container">
         <div>
-          <div class="footer-logo-full">
-            <a class="logo-footer" href="./index.html"
+          <div class="footer__logo-full">
+            <a class="footer__logo" href="./index.html"
               ><span class="logo-part guidance">Web</span>Studio</a
             >
           </div>
-          <address class="fotter-style">
+          <address class="footer__style">
             <ul class="list">
-              <li class="footer-item">
-                <a href="https://goo.gl/maps/uAzWxjjSuKX4QgEQA" class="footer-link guidance"
+              <li class="footer__item">
+                <a href="https://goo.gl/maps/uAzWxjjSuKX4QgEQA" class="footer__link guidance"
                   >м. Київ, пр-т Лесі Українки, 26</a
                 >
               </li>
-              <li class="footer-item">
-                <a href="mailto:info@devstudio.com" class="footer-contact guidance"
+              <li class="footer__item">
+                <a href="mailto:info@devstudio.com" class="footer__contact guidance"
                   >info@devstudio.com</a
                 >
               </li>
               <li>
-                <a href="tel:+380961111111" class="footer-contact guidance">+38 096 111 11 11</a>
+                <a href="tel:+380961111111" class="footer__contact guidance">+38 096 111 11 11</a>
               </li>
             </ul>
           </address>
         </div>
-        <div class="footer-join">
-          <p class="join-title">Приєднуйтесь</p>
+        <div class="join__footer">
+          <p class="join__title">Приєднуйтесь</p>
           <ul class="list join">
-            <li class="join-item">
-              <a class="join-link" href="">
-                <svg class="join-icon" width="20" height="20">
+            <li class="join__item">
+              <a class="join__link" href="">
+                <svg class="join__icon" width="20" height="20">
                   <use href="./images/icon.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="join-item">
-              <a class="join-link" href="">
-                <svg class="join-icon" width="20" height="20">
+            <li class="join__item">
+              <a class="join__link" href="">
+                <svg class="join__icon" width="20" height="20">
                   <use href="./images/icon.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="join-item">
-              <a class="join-link" href="">
-                <svg class="join-icon" width="20" height="20">
+            <li class="join__item">
+              <a class="join__link" href="">
+                <svg class="join__icon" width="20" height="20">
                   <use href="./images/icon.svg#icon-facebook "></use>
                 </svg>
               </a>
             </li>
-            <li class="join-item">
-              <a class="join-link" href="">
-                <svg class="join-icon" width="20" height="20">
+            <li class="join__item">
+              <a class="join__link" href="">
+                <svg class="join__icon" width="20" height="20">
                   <use href="./images/icon.svg#icon-linkedin "></use>
                 </svg>
               </a>
             </li>
           </ul>
         </div>
-        <div class="footer-subscription">
+        <div class="footer__subscription">
           <form>
-            <p class="join-title">Підпишіться на розсилку</p>
-            <div class="join-part">
+            <p class="join__title">Підпишіться на розсилку</p>
+            <div class="join__part">
               <label for="mailfor"></label>
               <input
                 type="email"
                 name="mail"
                 id="mailfor"
                 placeholder="E-mail"
-                class="input-footer"
+                class="footer__input"
               />
-              <button type="submit" class="btn-footer">
+              <button type="submit" class="footer__btn">
                 Підписатися
-                <svg class="btn-footer-icon" width="24" height="24">
+                <svg class="footer__btn-icon" width="24" height="24">
                   <use href="./images/icon.svg#icon-send"></use>
                 </svg>
               </button>
